--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,19 @@ Package: dlim
 Type: Package
 Title: Distributed Lag Interaction Model
 Version: 0.1.0
-Author: Ander Wilson, Josh Keller, Danielle Demateis
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Ander Wilson, Kayleigh Keller, Danielle Demateis
+Maintainer: Danielle Demateis <Danielle.Demateis@colostate.edu>
 Description: Collection of functions for distributed lag interaction models.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Imports: 
+  dlnm,
+  ggplot2,
+  mgcv,
+  splines,
+  tsModel
 Depends: 
     R (>= 2.10)
 Suggests: 
