the actual post submission update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,11 @@ export(plot_cumulative)
 export(sim_data)
 export(sim_dlf)
 export(sim_dlim)
+import(dlnm)
+import(ggplot2)
+import(lme4)
+import(mgcv)
+import(reshape2)
+import(splines)
+import(tsModel)
+import(viridis)
