--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,dlim)
 S3method(summary,dlim)
 export(cross_basis)
 export(dlim)
+export(model_comparison)
 export(plot_DLF)
 export(plot_cumulative)
 export(sim_data)
@@ -18,3 +19,17 @@ import(reshape2)
 import(splines)
 import(tsModel)
 import(viridis)
+importFrom(rlang,.data)
+importFrom(stats,dnorm)
+importFrom(stats,logLik)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,na.pass)
+importFrom(stats,predict)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,sd)
+importFrom(stats,vcov)
+importFrom(utils,packageDescription)
