examples to vignette, arguments changed for dlim and model_comparison functions, REML default for penalization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ import(reshape2)
 import(splines)
 import(tsModel)
 import(viridis)
+importFrom(lifecycle,deprecate_warn)
 importFrom(rlang,.data)
 importFrom(stats,dnorm)
 importFrom(stats,logLik)
